--- a/基础/四大组件.md
+++ b/基础/四大组件.md
@@ -37,13 +37,16 @@ bindService方式：调用者与服务绑定在了一起，调用者一旦退出
 Broadcast Receiver
 
 
-有序广播
+有序广播：依次传递信息，优先级，可被拦截abort
 
-无序广播
+无序广播：几乎同时收到广播
 
 
-静态注册
+静态注册：xml
 
-动态注册
+动态注册：可在baseXXX下写，类似EventBus
+
+本地广播:程序内部使用
+
 
 Content Provider
